<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.kanet.todoandroid.EditActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEditTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/add_titles" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:id="@+id/etDescription"
        android:lines="10"
        android:layout_below="@+id/etEditTitle"
        android:layout_alignRight="@+id/etEditTitle"
        android:layout_alignEnd="@+id/etEditTitle"
        android:layout_alignParentLeft="true"
        android:hint="@string/add_descripntion"
        android:editable="false"
        android:elegantTextHeight="false"
        android:gravity="top" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rdgp_level"
        android:layout_below="@+id/etDescription"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdLow"
            android:id="@+id/rdLow"
            android:layout_weight="1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/levelLow"
            android:textStyle="bold"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdMedium"
            android:id="@+id/rdMedium"
            android:layout_below="@+id/rdLow"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:checked="true"
            android:textStyle="bold"
            android:textColor="@color/levelMedium" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdHeight"
            android:id="@+id/rdHeight"
            android:layout_below="@+id/rdMedium"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@color/levelHigh"/>

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_Cancel"
        android:id="@+id/btnCancelEdit"
        android:layout_below="@+id/rdgp_level" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn_Save"
        android:id="@+id/btnSave"
        android:onClick="OnDoneEdit"
        android:layout_below="@+id/rdgp_level"
        android:layout_alignTop="@+id/btnCancelEdit"
        android:layout_toRightOf="@+id/btnCancelEdit"
        android:layout_toEndOf="@+id/btnCancelEdit" />




</RelativeLayout>
